# pantheon-agent-examples

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS
agents/ai_apy_pool_agent/: apy_agent.py  pyproject.toml
agents/ai_apy_pool_agent/tests/: __init__.py  test_apy_agent.py  test_apy_agent_extended.py  test_async_methods.py  test_edge_cases.py  test_telegram_bot.py  test_telegram_handlers.py
agents/ai_avatar/: avatar.py  pyproject.toml  ray_avatar.py
agents/ai_avatar/tests/: __init__.py  test_ray_avatar.py
agents/ai_dialogue_manager/: dialogue_manager.py  pyproject.toml  ray_dialogue_manager.py
agents/ai_dialogue_manager/tests/: __init__.py  test_dialogue_manager.py
agents/ai_smm_manager/: news_agent.py  pyproject.toml  ray_news_agent.py
agents/ai_smm_manager/tests/: __init__.py  test_ray_news_agent.py
agents/ai_twitter_summary/: pyproject.toml  ray_twitter_summary.py  twitter_summary.py
agents/ai_twitter_summary/tests/: __init__.py  test_twitter_summary.py
agents/creativity-agent/: .bumpversion.toml  Makefile  README.md  pyproject.toml
agents/creativity-agent/src/creativity_agent/: config.py  entrypoint.py
agents/creativity-agent/tests/: test_creativity_service.py
agents/example-agent/: Makefile  pyproject.toml
agents/example-agent/tests/: __init__.py  test_example_agent.py
agents/follow_unfollow_bot/: .bumpversion.toml  README.md  pyproject.toml
agents/follow_unfollow_bot/src/follow_unfollow_bot/: main.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/DB/: sqlalchemy_database_manager.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/DB/managers/: base.py  tracked_accounts_manager.py  user_manager.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/DB/models/: __init__.py  tracked_accounts_model.py  users_model.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/DB/sql_stuff/: DB.sql
agents/follow_unfollow_bot/src/follow_unfollow_bot/config/: config.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/service/: user_service.py
agents/follow_unfollow_bot/src/follow_unfollow_bot/tools/: follow_for_like.py
agents/follow_unfollow_bot/tests/: __init__.py  test_config.py
agents/telegram-listener/: .bumpversion.toml  README.md  pyproject.toml
agents/telegram-listener/src/telegram_listener/: client.py  data_processor.py  entrypoint.py  schemas.py
agents/telegram-listener/tests/: __init__.py  test_schemas.py
agents/twitter-ambassador-posting-agent/: pyproject.toml
agents/twitter-ambassador-posting-agent/src/twitter_ambassador_posting_agent/: commands.py  entrypoint.py
agents/twitter-ambassador-posting-agent/tests/: test_commands.py
agents/twitter-echo-bot/: README.md  pyproject.toml
agents/twitter-echo-bot/src/twitter_echo_bot/: .example.env  entrypoint.py
agents/twitter-echo-bot/src/twitter_echo_bot/DB/: sqlalchemy_database_manager.py
agents/twitter-echo-bot/src/twitter_echo_bot/DB/managers/: posted_tweets_manager.py  tracked_accounts_manager.py  tweets_history_manager.py  user_tracked_accounts_manager.py  user_tweet_match_manager.py  users_manager.py
agents/twitter-echo-bot/src/twitter_echo_bot/config/: config.py  promts.py
agents/twitter-echo-bot/src/twitter_echo_bot/services/: tracked_accounts_service.py  user_service.py
agents/twitter-echo-bot/src/twitter_echo_bot/tools/: create_tweets_service.py  get_tweets_service.py
agents/twitter-echo-bot/tests/: test_config.py  test_prompts.py
agents/wallet_tracker_agent/: pyproject.toml  ray_wallet_tracker.py  wallet_tracker.py
agents/wallet_tracker_agent/tests/: test_wallet_tracker.py
src/agents/creativity-agent/: .bumpversion.toml  Dockerfile  README.md  pyproject.toml
src/agents/creativity-agent/src/creativity_agent/: config.py  ray_entrypoint.py
src/agents/creativity-agent/tests/: test_creativity_service.py
src/agents/dialogue_manager/: .bumpversion.toml  README.md  entrypoint.py  pyproject.toml
src/agents/dialogue_manager/src/: commands.py  config.py  prompts.py
src/agents/dialogue_manager/src/dialogue_manager/: entrypoint.py
src/agents/example-agent/: .bumpversion.toml  Dockerfile  entrypoint.py  pyproject.toml
src/agents/example-agent/src/example_agent/: ray_entrypoint.py
src/agents/follow_unfollow_bot/: Dockerfile  docker-compose.yml  pyproject.toml
src/agents/follow_unfollow_bot/src/follow_unfollow_bot/: main.py
src/agents/kol-agent/: pyproject.toml  raid.py
src/agents/kol-agent/api/: twitter.py
src/agents/kol-agent/models/: raid_state.py
src/agents/kol-agent/nodes/: action_scheduler.py  bot_registry.py  content_generator.py  twitter_api_handler.py
src/agents/kol-agent/src/kol_agent/: config.py  raid.py  ray_entrypoint.py
src/agents/persona-agent/: .bumpversion.toml  README.md  pyproject.toml
src/agents/persona-agent/src/persona_agent/: ray_entrypoint.py
src/agents/solana-new-pairs/: pyproject.toml
src/agents/solana-new-pairs/src/solana_new_pairs/: entrypoint.py
src/agents/tik-tok-test-agent/: .bumpversion.toml  pyproject.toml
src/agents/tik-tok-test-agent/src/tik_tok_test_agent/: entrypoint.py
src/agents/tw-amb-gorilla-marketing/: .bumpversion.toml  pyproject.toml
src/agents/tw-amb-gorilla-marketing/src/tw_amb_gorilla_marketing/: commands.py  entrypoint.py
src/agents/twitter-ambassador-comments-answerer/: .bumpversion.toml  README.md  pyproject.toml
src/agents/twitter-ambassador-comments-answerer/src/twitter_ambassador_comments_answerer/: commands.py  entrypoint.py
src/agents/twitter-ambassador-posting-agent/: .bumpversion.toml  README.md  pyproject.toml
src/agents/twitter-ambassador-posting-agent/src/twitter_ambassador_posting_agent/: commands.py  entrypoint.py
src/agents/twitter-echo-bot/: .bumpversion.toml  pyproject.toml
src/agents/twitter-echo-bot/src/twitter_echo_bot/: docker-compose.yml  entrypoint.py  main.py
src/agents/twitter_summary/: .bumpversion.toml  README.md  entrypoint.py  pyproject.toml
src/agents/twitter_summary/src/: config.py  prompts.py
src/agents/twitter_summary/src/twitter_summary/: entrypoint.py
(+443 files in other folders)
