[project]
name = "ai-apy-pool-agent"
version = "0.1.0"
description = "AI APY Pool Agent for finding best DeFi investment pools"
authors = [{ name = "Pantheon Team", email = "team@pantheon.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests>=2.31.0",
    "aiogram>=3.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
