[project]
name = "ai-smm-manager"
version = "0.1.0"
description = "AI SMM Manager for cryptocurrency news and social media automation"
authors = [{ name = "Pantheon Team", email = "team@pantheon.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.8.0",
    "aiogram>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "ray>=2.0.0",
    "redis>=4.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
