[project]
name = "creativity-agent"
version = "0.1.0"
description = "Ray Serve agent for interacting with the Creatify API"
authors = [{ name = "Vlad", email = "drobotuchin7@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "httpx>=0.25.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[[tool.poetry.source]]
name = "pantheon"
url = "https://pantheon-688567299207.d.codeartifact.eu-west-1.amazonaws.com/pypi/pantheon/simple/"
priority = "primary"

[project.entry-points."agent.entrypoint"]
target = "creativity_agent.ray_entrypoint:agent_builder"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyarrow = "^15.0.0"
ray = {extras = ["serve"], version = "^2.42.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
