[project]
name = "example-agent"
version = "0.1.0"
description = "This is a tool that use a combination of Ray Serve and FastAPI to communicate with the agents and execute a tools."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
]

[project.entry-points."agent.entrypoint"]
target = "example_agent.ray_entrypoint:app"


[tool.poetry]
packages = [{include = "*", from="src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"


[[tool.poetry.source]]
name = "pantheon"
url = "https://pantheon-688567299207.d.codeartifact.eu-west-1.amazonaws.com/pypi/pantheon/simple/"
priority = "supplemental"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
