[project]
name = "follow_unfollow_bot"
version = "0.0.1"
description = "Twitter bot that follows and unfollows users"
authors = [
    {name = "Valentino",email = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings",
    "fastapi (>=0.115.11,<0.116.0)",
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."agent.entrypoint"]
target = "follow_unfollow_bot.main:app"
