[project]
name = "twitter-ambassador-posting-agent"
version = "0.0.29"
description = "TwitterAmbassadorPostingAgent"
authors = [{name = "k1llzzy",email = "gekachan04@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiogram (>=3.16.0)",
    "loguru==0.7.3",
    "requests (>=2.32.3)",
    "jinja2 (==3.1.5)",
]

[tool.poetry]
packages = [{include = "*", from="src"}]


[project.entry-points."agent.entrypoint"]
target = "twitter_ambassador_posting_agent.entrypoint:get_agent"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.21.2"
ray = { version = ">=2.42.1,<3.0.0", extras = ["serve"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
