[project]
name = "twitter-echo-bot"
version = "0.1.0"
description = "This is Twitter bot that collect posts of selected users and repost it after promt processing"
authors = [
    {name = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "loguru==0.7.3",
    "pydantic-settings (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.entry-points."agent.entrypoint"]
target = "twitter_echo_bot.entrypoint:get_agent"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.21.2"
ray = { version = ">=2.42.1,<3.0.0", extras = ["serve"] }
