[project]
name = "dialogue-manager"
version = "0.1.0"
description = "Dialogue Manager Agent"
authors = [{name = "k1llzzy",email = "gekachan04@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "telethon (== 1.37.0)",
]

[tool.poetry]
packages = [{include = "*", from="src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ray = { version = ">=2.42.1,<3.0.0", extras = ["serve"] }

[project.entry-points."agent.entrypoint"]
target = "dialogue_manager.entrypoint:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
