[project]
name = "follow_unfollow_bot"
version = "0.1.0"
description = "Twitter bot that follows and unfollows users"
authors = [
    {name = "Valentino",email = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiofiles (==24.1.0)",
    "aiohappyeyeballs (==2.4.4)",
    "aiohttp (==3.11.11)",
    "aiolimiter (==1.2.1)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.7.0)",
    "asyncpg (==0.30.0)",
    "attrs (==24.3.0)",
    "backports-tarfile (==1.2.0)",
    "beautifulsoup4 (==4.12.3)",
    "bitarray (==3.0.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "ckzg (==2.0.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.0)",
    "cytoolz (==1.0.1)",
    "distlib (==0.3.9)",
    "distro (==1.9.0)",
    "dulwich (==0.22.8)",
    "fastapi (==0.115.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "findpython (==0.6.2)",
    "frozenlist (==1.5.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "hexbytes (==1.3.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jiter (==0.8.2)",
    "keyring (==25.6.0)",
    "magic-filter (==1.0.12)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "multidict (==6.1.0)",
    "oauthlib (==3.2.2)",
    "openai (==1.58.1)",
    "packaging (==24.2)",
    "parsimonious (==0.10.0)",
    "pbs-installer (==2025.2.12)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.6)",
    "playwright (==1.49.1)",
    "poetry (==2.1.1)",
    "poetry-core (==2.1.1)",
    "postgres (==4.0)",
    "propcache (==0.2.1)",
    "psycopg2-binary (==2.9.10)",
    "psycopg2-pool (==1.2)",
    "pyaes (==1.6.1)",
    "pyasn1 (==0.6.1)",
    "pybit (==5.8.0)",
    "pycparser (==2.22)",
    "pycryptodome (==3.21.0)",
    "pydantic (==2.10.4)",
    "pydantic-settings (==2.7.0)",
    "pydantic-core (==2.27.2)",
    "pyee (==12.0.0)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.0.1)",
    "pyunormalize (==16.0.0)",
    "rapidfuzz (==3.12.2)",
    "redis (==5.2.1)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "requests-oauthlib (==2.0.0)",
    "requests-toolbelt (==1.0.0)",
    "rlp (==4.0.1)",
    "rsa (==4.9)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.6)",
    "sqlalchemy (==2.0.36)",
    "sqlmodel (==0.0.22)",
    "starlette (==0.45.3)",
    "structlog (==25.1.0)",
    "tenacity (==9.0.0)",
    "tomlkit (==0.13.2)",
    "toolz (==1.0.0)",
    "tqdm (==4.67.1)",
    "trove-classifiers (==2025.2.18.16)",
    "types-requests (==2.32.0.20241016)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.29.2)",
    "websocket-client (==1.8.0)",
    "websockets (==13.1)",
    "yarl (==1.18.3)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
