[project]
name = "kol-agent"
version = "0.0.1"
description = "A system for coordinating actions between bots."
authors = [{name = "mdmeldon",email = "mdmeldon@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiogram (>=3.16.0)",
    "requests (>=2.32.3)",
    "jinja2 (==3.1.5)",
    "redis-client (>=0.1.6)",
    "twitter-ambassador-utils (>=0.1.4)",
    "tweetscout-utils (>=0.0.2)",
    "langfuse (>=2.60.3, <3.0.0)",
    "langchain (>=0.3.24, <0.4.0)",
    "langgraph (>=0.3.31, <0.4.0)",
    "langchain_openai (>=0.3.14, <0.4.0)",
    "langchain_community (>=0.3.22, <0.4.0)",
]

[tool.poetry]
packages = [{include = "*", from="src"}]

[[tool.poetry.source]]
name = "pantheon"
url = "https://pantheon-688567299207.d.codeartifact.eu-west-1.amazonaws.com/pypi/pantheon/simple/"
priority = "primary"

[tool.poetry.dependencies]
redis-client = {source = "pantheon"}
twitter-ambassador-utils = {source = "pantheon"}
base-agent = {source = "pantheon"}
tweetscout-utils = {source = "pantheon"}

[project.entry-points."agent.entrypoint"]
target = "kol_agent.ray_entrypoint:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ray = {extras = ["serve"], version = "^2.42.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
