[project]
name = "solana-new-pairs"
version = "0.1.0"
description = "Solana blockchain scanner for new tokens, risk assessment, and market metrics like volume, liquidity, and holders analysis."
authors = [{name = "Valentin",email = "bychynski.valiantsin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
