[project]
name = "tik-tok-test-agent"
version = "0.0.1"
description = "Test tik-tok-agent"
authors = [
    {name = "Valentino",email = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tik-tok-package (==0.0.6)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pantheon"
url = "https://pantheon-688567299207.d.codeartifact.eu-west-1.amazonaws.com/pypi/pantheon/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
tik-tok-package = {source = "pantheon"}


[project.entry-points."agent.entrypoint"]
target = "tik_tok_test_agent.entrypoint:get_agent"


[tool.poetry]
packages = [{include = "*", from="src"}]