[project]
name = "twitter-ambassador-comments-answerer"
version = "0.1.0"
description = "TwitterAmbassadorCommentsAnswerer"
authors = [{name = "k1llzzy",email = "gekachan04@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiogram (>=3.16.0)",
    "requests (>=2.32.3)",
    "jinja2 (==3.1.5)",
]

[tool.poetry]
packages = [{include = "*", from="src"}]

[project.entry-points."agent.entrypoint"]
target = "twitter_ambassador_comments_answerer.entrypoint:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ray = { version = ">=2.42.1,<3.0.0", extras = ["serve"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
