[project]
name = "twitter-echo-bot"
version = "0.0.1"
description = "This is Twitter bot that collect posts of selected users and repost it after promt processing"
authors = [
    {name = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "ray[serve] (>=2.43.0,<3.0.0)",
    "agents-tools-logger (==0.0.1.*)", #Это пакет который создан в пр 73 (PAN 85)
    "send-openai-request (==0.0.1.dev0+pan.82.a0a608c)",  #Это пакет который создан в пр 70 (PAN 82)
    "tweetscout-utils (==0.0.1.dev0+pan.82.354f99b)",  #Это пакет который создан в пр 70 (PAN 82)
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.entry-points."agent.entrypoint"]
target = "twitter_echo_bot.entrypoint:get_agent"