[project]
name = "twitter-echo-bot"
version = "0.0.1"
description = "This is Twitter bot that collect posts of selected users and repost it after promt processing"
authors = [
    {name = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "ray[serve] (>=2.43.0,<3.0.0)",
    "agents-tools-logger (>=0.1.0)",
    "send-openai-request (>=0.1.0)",
    "tweetscout-utils (>=0.1.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.entry-points."agent.entrypoint"]
target = "twitter_echo_bot.entrypoint:get_agent"