[project]
name = "twitter-summarizer"
version = "0.1.0"
description = "Twitter Summary Agent"
authors = [{name = "k1llzzy",email = "gekachan04@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "aiogram (>=3.16.0)",
]

[tool.poetry]
packages = [{include = "*", from="src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ray = { version = ">=2.42.1,<3.0.0", extras = ["serve"] }

[project.entry-points."agent.entrypoint"]
target = "twitter_summary.entrypoint:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
